Start fixing CSS... I hate CSS

--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,14 @@ collections:
 
 defaults:
   - scope:
+      path: "assets/img"
+    values:
+      image: true
+  - scope:
+      path: "assets/ico"
+    values:
+      image: true
+  - scope:
       path: ""
       type: "electronics"
     values:
