--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "esinstall": "^1.1.7"
   },
   "dependencies": {
+    "camera-project": "^1.0.2",
+    "canvas-sketch-util": "^1.10.0",
+    "gl-matrix": "^3.4.3",
     "perspective-camera": "^2.0.1",
     "three": "^0.135.0"
   },
   "esinstall": {
     "install": [
       "perspective-camera",
-      "three"
+      "three",
+      "camera-project",
+      "gl-matrix",
+        "canvas-sketch-util"
     ]
   }
 }
