Node modules install directly into jekyll _site dir

--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,13 @@ url: https://formandstructure.co
 baseurl:
 
 exclude:
+  - node_modules
   - package.json
   - package-lock.json
   - install-modules.mjs
+
+keep_files:
+  - web_modules
 
 collections:
   pages:
