--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "camera-project": "^1.0.2",
     "canvas-sketch-util": "^1.10.0",
+    "convex-hull": "^1.0.3",
     "flat-palettes": "^0.1.0",
     "gl-matrix": "^3.4.3",
     "perspective-camera": "^2.0.1",
@@ -21,7 +22,11 @@
       "camera-project",
       "gl-matrix",
       "canvas-sketch-util",
-      "flat-palettes"
-    ]
+      "flat-palettes",
+      "convex-hull"
+    ],
+    "installOptions": {
+      "dest": "_site/web_modules"
+    }
   }
 }
